--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<!-- //banner end -->
 
 				<a href="#" onepage="title:'首页',type:2,content:'pages/main.html',moreBtn:false">单页测试</a>
-				<hr><a href="#" onepage="title:'嘿嘿',content:'http://www.huimintong.cc'">单页测试2</a>
+				<hr><a href="#" onepage="title:'嘿嘿',content:'http://www.huimintong.cc',fullScreen:true">单页测试2</a>
 				<hr><a href="#" onepage="title:'嘿嘿',content:'.pageItem'">单页测试3</a>
 <!-- //Home end -->
             </div>
