--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<div class="header" id="header"></div>
 	<div class="swiper-container" id="tw4_pages">
         <div class="tw4PageWrapper swiper-wrapper">
+<!-- ============================================================================================================ -->
             <div class="pageItem" data-title="主页" data-classname="home" data-icon="./images/nav_icon_home.png" data-iconhover="./images/nav_icon_home_hover.png">
 <!-- Home start -->
 				<!-- banner start -->
@@ -34,51 +35,79 @@
 				<!-- default_images_slide start -->
 			    <div class="swiper-container" id="default_images_slide" style="height:80px;">
 			        <div class="swiper-wrapper">
-			            <div class="swiper-slide">Slide 1</div>
-			            <div class="swiper-slide">Slide 2</div>
-			            <div class="swiper-slide">Slide 3</div>
-			            <div class="swiper-slide">Slide 4</div>
-			            <div class="swiper-slide">Slide 5</div>
-			            <div class="swiper-slide">Slide 6</div>
-			            <div class="swiper-slide">Slide 7</div>
-			            <div class="swiper-slide">Slide 8</div>
-			            <div class="swiper-slide">Slide 9</div>
-			            <div class="swiper-slide">Slide 10</div>
+			            <div class="swiper-slide"><img style="width:100%;height:100%" src="data:image/gif;base64,R0lGODlhFAAPAIAAAKqqqv///yH5BAAHAP8ALAAAAAAUAA8AAAIxjI+pwO3fDFD0zHApSzfzaEkV5mEislUdOpWhKWWdfKaWU5NaDLejtxotYpAiSDgqAAA7" alt=""></div>
+			            <div class="swiper-slide"><img style="width:100%;height:100%" src="data:image/gif;base64,R0lGODlhFAAPAIAAAKqqqv///yH5BAAHAP8ALAAAAAAUAA8AAAIxjI+pwO3fDFD0zHApSzfzaEkV5mEislUdOpWhKWWdfKaWU5NaDLejtxotYpAiSDgqAAA7" alt=""></div>
+			            <div class="swiper-slide"><img style="width:100%;height:100%" src="data:image/gif;base64,R0lGODlhFAAPAIAAAKqqqv///yH5BAAHAP8ALAAAAAAUAA8AAAIxjI+pwO3fDFD0zHApSzfzaEkV5mEislUdOpWhKWWdfKaWU5NaDLejtxotYpAiSDgqAAA7" alt=""></div>
+			            <div class="swiper-slide"><img style="width:100%;height:100%" src="data:image/gif;base64,R0lGODlhFAAPAIAAAKqqqv///yH5BAAHAP8ALAAAAAAUAA8AAAIxjI+pwO3fDFD0zHApSzfzaEkV5mEislUdOpWhKWWdfKaWU5NaDLejtxotYpAiSDgqAAA7" alt=""></div>
+			            <div class="swiper-slide"><img style="width:100%;height:100%" src="data:image/gif;base64,R0lGODlhFAAPAIAAAKqqqv///yH5BAAHAP8ALAAAAAAUAA8AAAIxjI+pwO3fDFD0zHApSzfzaEkV5mEislUdOpWhKWWdfKaWU5NaDLejtxotYpAiSDgqAAA7" alt=""></div>
+			            <div class="swiper-slide"><img style="width:100%;height:100%" src="data:image/gif;base64,R0lGODlhFAAPAIAAAKqqqv///yH5BAAHAP8ALAAAAAAUAA8AAAIxjI+pwO3fDFD0zHApSzfzaEkV5mEislUdOpWhKWWdfKaWU5NaDLejtxotYpAiSDgqAAA7" alt=""></div>
+			            <div class="swiper-slide"><img style="width:100%;height:100%" src="data:image/gif;base64,R0lGODlhFAAPAIAAAKqqqv///yH5BAAHAP8ALAAAAAAUAA8AAAIxjI+pwO3fDFD0zHApSzfzaEkV5mEislUdOpWhKWWdfKaWU5NaDLejtxotYpAiSDgqAAA7" alt=""></div>
+			            <div class="swiper-slide"><img style="width:100%;height:100%" src="data:image/gif;base64,R0lGODlhFAAPAIAAAKqqqv///yH5BAAHAP8ALAAAAAAUAA8AAAIxjI+pwO3fDFD0zHApSzfzaEkV5mEislUdOpWhKWWdfKaWU5NaDLejtxotYpAiSDgqAAA7" alt=""></div>
+			            <div class="swiper-slide"><img style="width:100%;height:100%" src="data:image/gif;base64,R0lGODlhFAAPAIAAAKqqqv///yH5BAAHAP8ALAAAAAAUAA8AAAIxjI+pwO3fDFD0zHApSzfzaEkV5mEislUdOpWhKWWdfKaWU5NaDLejtxotYpAiSDgqAAA7" alt=""></div>
+			            <div class="swiper-slide"><img style="width:100%;height:100%" src="data:image/gif;base64,R0lGODlhFAAPAIAAAKqqqv///yH5BAAHAP8ALAAAAAAUAA8AAAIxjI+pwO3fDFD0zHApSzfzaEkV5mEislUdOpWhKWWdfKaWU5NaDLejtxotYpAiSDgqAAA7" alt="">0</div>
 			        </div>
 			        <div class="swiper-pagination defaultImagesSlidePagination"></div>
 			    </div>
 				<!-- //default_images_slide end -->
 				
 
-				<h3><a href="#" onepage="title:'Main页面',type:2,content:'pages/main.html',moreBtn:false">Main 页面</a></h3>
-				<h3><a href="#" onepage="title:'文本单页',content:'这里是文本',moreListTitle:'列表标题',moreListContent:'列表内容'">文本单页和More下拉菜单</a></h3>
-				<h3><a href="#" onepage="title:'点右侧按钮试试',content:'.testContent',moreListTitle:'指定元素列表',moreListContent:'.testMoreList'">指定元素内容和More下拉菜单</a></h3>
-					<div class="testContent hide">我是隐藏内容，专门测试指定元素内容的</div>
-					<div class="testMoreList hide">
-						<ul>
-							<li><a href="#" onepage="title:'测试1',type:2,content:'pages/main.html',moreBtn:false">测试1</a></li>
-							<li><a href="#" onepage="title:'测试2',content:'测试2',moreBtn:false">测试2</a></li>
-							<li><a href="#" onepage="title:'测试3',type:2,content:'http://m.meitu.com/',moreBtn:false">测试3</a></li>
-							<li><a href="#" onepage="type:2,content:'http://m.meitu.com/',customHeader:'.henderSearch'">单页中搜索头部</a></li>
-						</ul>
-					</div>
-				<h3><a href="#" onepage="type:2,content:'http://m.jd.com',moreBtn:false,fullScreen:true">全屏远程连接测试</a></h3>
+				<!-- 演示测试数据 -->
+				<style>
+					.testBlock{border-top: 1px solid #ddd;margin:2rem 0;}
+					.testBlock a{width:50%;float: left;border-left: 1px solid #ddd;margin-left: -1px;font-size: 1.4rem;text-align: center;line-height:3rem;text-decoration: none;border-bottom: 1px solid #ddd;background-color: #fff;}
+				</style>
+				<div class="testBlock clearfix">
+					<a onepage="title:'基本单页',content:'基本单页内容详情'">基本单页</a>
+					<a onepage="title:'Iframe框架页面', type:2, content:'pages/main.html'">Iframe框架页面</a>
+					<a onepage="type:2,content:'http://m.jd.com',fullScreen:true">Iframe框架全屏页面</a>
+					<a onepage="title:'指定Dom元素',content:'.testContent'">指定Dom元素</a>
+					<a onepage="title:'More左侧滑动菜单',content:'More左侧滑动菜单展示，请点击右上角按钮试试。',moreBtn:true,moreListTitle:'菜单标题',moreListContent:'菜单内容'">More左侧滑动菜单</a>
+					<a onepage="title:'More左侧滑动菜单2',content:'菜单内容为指定Dom元素的内容，请点击右上角按钮试试。',moreBtn:true,moreListTitle:'菜单标题',moreListContent:'.testMoreList'">More左侧滑动菜单2</a>
+					<a onepage="title:'异步读取数据',type:3,content:'pages/test.php',ajaxData:{param:'test'},callback:'base:test'">异步读取数据</a>
+					<a onepage="title:'我在第1层',content:'.testContent2',index:1">多层页面展示</a>
+				</div>
+
+				<div class="testContent hide">我是指定Dom元素的内容，content为 '.'+className 或者 '#'+id。</div>
+				<div class="testContent2 hide">
+					<h3 onepage="title:'我在第2层',content:'基本单页内容详情',index:2">请点击我</h3>
+				</div>
+				<div class="testMoreList hide">
+					<ul>
+						<li><a onepage="title:'基本单页',content:'基本单页内容详情'">基本单页</a></li>
+						<li><a onepage="title:'多层页面展示',content:'我在第2层',index:2">多层页面展示</a></li>
+						<li><a onepage="title:'美图秀秀',type:2,content:'http://m.meitu.com/',index:2">美图秀秀外链</a></li>
+						<li><a onepage="content:'自定义头部',customHeader:'.henderSearch',index:2">自定义头部</a></li>
+					</ul>
+				</div>
+				<!-- 演示测试数据end -->
+
+
+
 <!-- //Home end -->
             </div>
+<!-- ============================================================================================================ -->
             <div class="pageItem" data-title="公告" data-classname="msg" data-icon="./images/nav_icon_msg.png" data-iconhover="./images/nav_icon_msg_hover.png">
 <!-- Msg start -->
-            	Slide 2
+            	公告内容
 <!-- //Msg end -->
             </div>
+<!-- ============================================================================================================ -->
             <div class="pageItem" data-title="搜索" data-classname="search" data-icon="./images/nav_icon_search.png" data-iconhover="./images/nav_icon_search_hover.png">
 <!-- Search start -->
-            	Slide 3
+            	搜索结果
 <!-- //Search end -->
             </div>
+<!-- ============================================================================================================ -->
             <div class="pageItem" data-title="联系我们" data-classname="contact" data-icon="./images/nav_icon_contact.png" data-iconhover="./images/nav_icon_contact_hover.png">
 <!-- Contact start -->
-            	Slide 4
+            	联系我们板块
 <!-- //Contact end -->
+            </div>
+<!-- ============================================================================================================ -->
+            <div class="pageItem" data-title="帮助文档" data-classname="help" data-icon="./images/nav_icon_document.png" data-iconhover="./images/nav_icon_document_hover.png">
+<!-- Help start -->
+            	帮助文档
+<!-- //Help end -->
             </div>
         </div>
 		<div class="tw4PagesBg" data-swiper-parallax="-20%" data-swiper-parallax-duration="1600"></div>
