--- a/pages/main.html
+++ b/pages/main.html
@@ -5,6 +5,6 @@
 	<title>Main</title>
 </head>
 <body>
-	我是Main页面^^
+	<p>我是Pages下的Main.html页面。我被包含在Iframe框架下面，和主页面没啥关系，你可以在这里随便调整。</p>
 </body>
 </html>
