--- a/pages/main.html
+++ b/pages/main.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 	<p>我是Pages下的Main.html页面。我被包含在Iframe框架下面，和主页面没啥关系，你可以在这里随便调整。</p>
+	<a href="javascript:window.parent.onepage_back();">我是Iframe下的返回按钮，在全屏的情况下使用我，即可实现自定义返回按钮。</a>
 </body>
 </html>
