--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 				<div class="testContent2 hide">
 					<h3 onepage="title:'我在第2层',content:'基本单页内容详情',index:2">请点击我，打开基本单页</h3>
 					<h3 onepage="title:'我在第2层',type:2,content:'pages/main.html',index:2">请点击我，打开Iframe框架页面</h3>
+					<h3 onepage="title:'美图秀秀',type:2,content:'http://m.meitu.com/',index:2">请点击我，打开Iframe框架页面，美图秀秀外链</h3>
 					<h3 onepage="type:2,content:'pages/main.html',fullScreen:true,index:2">请点击我，Iframe框架全屏页面</h3>
 				</div>
 				<div class="testMoreList hide">
