--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 	seajs.config({
 		base: "./js/",
 		paths: {
-			'm': 'sea-modules/'
+			'm': 'sea-modules'
 		},
 		alias: {
 			"jquery": "static/jq/jquery-1.11.3.min",
