--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <!-- //Contact end -->
             </div>
 <!-- ============================================================================================================ -->
-            <div id="page_help" class="pageItem" data-title="帮助文档" data-classname="help" data-icon="./images/nav_icon_document.png" data-iconhover="./images/nav_icon_document_hover.png">
+            <div id="page_help" class="pageItem" data-title="帮助文档" data-classname="help" data-amount="新" data-icon="./images/nav_icon_document.png" data-iconhover="./images/nav_icon_document_hover.png">
 <!-- Help start -->
             	帮助文档
 <!-- //Help end -->
