--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <!--[if lt IE 9]>
 <script src="./js/static/js/html5.min.js"></script>
 <![endif]-->
+<script>
+var WEB_ROOT = './';
+</script>
 </head>
 <body>
 <div class="tw4Container" id="tw4_container">
@@ -126,48 +129,14 @@
     <div class="tw4PagePagination" id="page_pagination"></div>
 </div>
 
-<script src="./js/static/js/sea.js"></script>
-<script src="./js/static/js/seajs-css.js"></script>
-<script>
-	// 简单配置
-	seajs.config({
-		base: "./js/",
-		paths: {
-			'm': 'sea-modules'
-		},
-		alias: {
-			"jquery": "static/jq/jquery-1.11.3.min",
-			"swiper": "static/js/swiper.min",
-			"swiper-css": "static/css/swiper.min.css"
-		}
-	});
-	// 加载入口模块
-	seajs.use(['jquery', 'main', 'm/myswiper'], function($, main, myswiper){
-		window.TW4MAIN = main.init();
-
-		myswiper.done(function(){
-			//banner
-			new Swiper('#banner', {
-	        	pagination: '.bannerPaginatio',
-				autoHeight: 'auto',
-				autoplay : 5000,
-			});
-			//default_images_slide
-		    new Swiper('#default_images_slide', {
-		        pagination: '.defaultImagesSlidePagination',
-		        slidesPerView: 3,
-		        paginationClickable: true,
-		        spaceBetween: 10,
-		    });
-		});
-
-	});
-</script>
-
 <!-- 头部搜索模板 -->
 <div class="henderSearch hide">
 	<span class="searchIcon"></span>
 	<input type="search" name="search" value="" placeholder="搜索">
 </div>
+
+<script src="./js/static/js/sea.js"></script>
+<script src="./js/static/js/seajs-css.js"></script>
+<script src="./js/default.js"></script>
 </body>
 </html>
