--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ var WEB_ROOT = './';
 					<a onepage="title:'More左侧滑动菜单2',content:'菜单内容为指定Dom元素的内容，请点击右上角按钮试试。',moreBtn:true,moreListTitle:'菜单标题',moreListContent:'.testMoreList'">More左侧滑动菜单2</a>
 					<a onepage="title:'异步读取数据',type:3,content:'pages/test.php',ajaxData:{param:'test'},callback:'base:test'">异步读取数据</a>
 					<a onepage="title:'我在第1层',content:'.testContent2',index:1">多层页面展示</a>
+					<a onepage="title:'静态模版页面',callback:'base:test'">静态模版页面</a>
 				</div>
 
 				<div class="testContent hide">我是指定Dom元素的内容，content为 '.'+className 或者 '#'+id。</div>
